样式有点丑，将就吧

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <!-- endbower -->
 </head>
 <body ng-app="app">
-	<div ui-view layout="column"></div>
+	<div ui-view layout="column" class="content"></div>
 	<!-- bower:js -->
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
